kafkademo/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /bachdi-dev.test
        pathType: Prefix
        backend:
          service:
            name: sample-service
            port:
              number: 8083
